# 13-Webserv

./: .gitignore  CMakeLists.txt  CorrectionCommands  Makefile  README.md  config2.conf  config3.conf  connectionLoop.cpp  poulet  server.conf  test.sh  webservTests
.github/workflows/: main.yml  tests.yml
cgi-bin/: test.php
config_file_parsing/: ConfigFile.cpp  ConfigFile.hpp  Makefile  config.conf  config2.conf  config3.conf  config4.conf  configtest.conf  exempleconf.txt  maintest.cpp
docs/: TODO  TODO1
html/: 501.html  echo.php  main.html  test.php  testGET.html  testPHP.html  uploadtest.html
html/upload/: poulet  poulet1
inc/: ConfigFile.hpp  HttpRequest.hpp  HttpResponse.hpp  ServerConfiguration.hpp  tempCodeRunnerFile  webserv.hpp
logs/: access_log.txt  error_log.txt
sites/127Server/: index.html
sites/dindonLocation/: index.html
sites/dindonServer/: index.html
sites/html/: testPOST.html  uploadtest.html
sites/html/errors/: 404.html  500.html
sites/pouletServer/: index.html  testPHP.html
src/: ConfigFile.cpp  HttpRequest.cpp  HttpResponse.cpp  ServerConfiguration.cpp  httpResponse.cpp  launchServer.cpp  log.cpp  main.cpp  monitorServer.cpp  server.cpp  utils.cpp
srcs/: main.cpp
tests/: UsefulTestsCommands  compilationTests.cpp  launchServerTests.cpp  poulet  webservTests.cpp
tests/config_file_parsing/: ConfigFile2.cpp  Makefile  color.h  config.conf  headertest.txt
